index.css
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
 


.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 50px;
    background: #3e2c23;
    color: gold;
    position: sticky;
    top: 0;
    z-index: 10;
    
}

.logo {
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo img {
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.logo h1 {
   margin: 0;
    font-size: 30px;
    font-family: "cinzel", serif;
    text-shadow: 1px 1px 2px white;
}


.logo p {
    margin: 0;
    font-size: 12px;
}
.nav{
    display: flex;
    gap: 20px;
}

.nav a {
    color: gold;
    text-decoration: none;
    margin-left: 25px;
    margin-right: 15px;
}

.nav a:hover {
    color: white;
}
.menu-icon{
    display: none;
    font-size: 24px;
    cursor: pointer;
}

@media (max-width: 768px) {
    body,html{
        min-width: 100%;
    }
    .nav {
        display: none;
        flex-direction: column;
        background: #3e2c23;
        position: absolute;
        top: 60px;
        right: 0;
        width: 200px;
        padding: 10px;
    }

    .nav.active {
        display: flex;
    }
    .nav a:active{
        color: #fbfafa;
    }

    .menu-icon {
        display: block;
    }
    
}

/* end header */
.section1{
    background-image: url(imgsection1.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 700px;
    
}
.navsection1{
    float: right;
    padding-right: 40px;
    margin-top: 20px;
    font-size: 20px;
    font-weight: 400;
    position: relative;
    z-index: 5;
}
.navsection1 a{
    text-decoration: none;
    background-color: rgb(232, 194, 133);
    color: #000;
    text-align: center;
    font-size: 20px;
    padding: 7px;
    margin: 10px;
    border: 1px solid rgb(58, 33, 2);
    display: inline-block;
    text-shadow: 1px 1px 1px wheat;
    

   }
   a:hover{
    transform: scale(1.1);
} 
.navsection1 a:hover{
    color: rgb(121, 17, 69);
}
.float{
    clear: both;
    position: relative;
    z-index: 5;
}
.welcome{
    position: relative;
    top: 150px;
    font-size: 100px;
    color: rgb(18, 18, 17);
    padding-left: 15px;
    z-index: 5;
     animation: textColor 12s infinite ease-in-out;

}






.section1 {
  position: relative;
  height: 100vh;
  overflow: hidden;
}


.bg {
  position: absolute;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  z-index: 0;
}


.bg1 {
    z-index: 0;
  background-image: url("card1.jpg"); 
  animation: zoom 12s infinite ease-in-out, fade1 12s infinite ease-in-out;
}


.bg2 {
    z-index: 0;
  background-image: url("imgsection1.jpg"); 
  animation: zoom 12s infinite ease-in-out, fade2 12s infinite ease-in-out;
}


@keyframes zoom {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(1.2);
  }
}


@keyframes fade1 {
  0%, 100% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
}

@keyframes fade2 {
  0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

@keyframes textColor {
  0%, 100% {
    color: rgb(12, 12, 12); /* لون مع الصورة الأولى */
  }

  50% {
    color: rgb(255, 248, 248); /* لون مع الصورة التانية */
  }
}


/*end section1*/




/*section2*/
body{
    background-color: rgb(248, 231, 203);
}
.cards {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    padding: 40px;
    margin-top: 50px;
}

.card {
    display: flex;
    flex-direction: column;
    background: #f5e6d3;
    padding: 15px;
    border-radius: 10px;
    width: 30%;
    text-align: center;
}

.card img {
    width: 100%;
    border-radius: 10px;
}
.img3{
    height:82%;
}

.card p {
    margin: 15px 0;
    color: #3e2c23;
}

.card button {
    background: #8b5e3c;
    color: white;
    border: none;
    padding: 10px;
    border-radius: 5px;
    cursor: pointer;
}

.card button:hover {
    background: #6d472f;
}
@media(max-width:768px){
     .cards{
        flex-direction: column;
     }
    .card {
        width: 100%;
    }
}



.p1,.p2,.p3{
    text-align: center;
}
.p1,.p3{
    font-size: 100px;
}
.p2{
    font-size: 50px;
    margin-bottom: 40px;
  
}
.e,.g,.y,.p,.t {
    background-image: linear-gradient(45deg,#990a0a ,rgb(246, 240, 240) ,black);
    text-shadow:2px 2px 2px #f5e6d3;
    padding:0 10px ;
    border-radius: 10px;
}
@media(max-width:768px){
    .p1,.p3{
    font-size: 60px;
    
}
.p2{
    font-size: 20px;
    margin-bottom: 20px;
  
}
.e,.g,.y,.p,.t{
    padding: 0 5px ;
}

}

/*section 3*/
.section3{
    margin-top: 80px;
    margin-bottom: 150px;
    display: flex;
    justify-content: space-around;
    gap: 20px;
    padding: 20px;
}
video{
    width: 40%;
    border-radius: 20px;
}
.section3 img{
    width: 20%;
    height: 300px;
    border-radius: 50%;
    box-shadow: 4px 4px 2px 2px rgb(209, 167, 99) ;
}
@media(max-width:800px){
     .section3{
        flex-direction: column;
        gap: 20px;
        align-items: center;
     }
     video{
        width: 100%;
        
     }
     .section3 img{
        width: 60%;
     }
    }
    @media(min-width:810px)and(max-width:1030){
     .section3 img{

        width: 200px;
        height: 200px;
     }
    }




    #themeToggleBtn {
  display: block;
  margin: 50px auto;
  padding: 12px 20px;
  font-size: 18px;
  cursor: pointer;
  border: none;
  background: #49250b;
  color: gold;
  border-radius: 8px;
  transition: 0.3s;
}

#themeToggleBtn:hover {
  transform: scale(1.05);
}




/*start footer*/
.footer{
    background-color: #3e2c23;
    color: gold;
    text-align: center;
    font-size: 20px;
    font-weight: 900;
    padding: 50px;
    
}
.container{
    display: flex;
    justify-content: space-around;
    text-align: center;
    padding: 15px;
    line-height: 2;
    font-size: 20px;
    font-weight: 700;
    color: gold;
}
.div2 a {
    text-decoration: none;
    color: gold;

}
ul{
    list-style-type: none ;
    list-style-position: inside;
    display: flex;
    gap: 50px;
    padding-bottom: 50px;
    padding-top: 20px;

}
.div2 a:hover{
    color: rgb(238, 237, 225);
}
@media(max-width:768px){
 .container{
     display: flex;
     flex-direction: column;
     }
 .div1,.div2,.div3{
    margin: 10px;
 }

}
/*end footer */












/*change theme */
  body.theme2 {
    background-color: #1e1b18;
}

.theme2 .header {
  background: #c9a24e;

}
.theme2  .header a{
    color: #1e1b18;
    font-size: 20px;
    font-weight: 600;
}
.theme2  .header a:hover{
    color: aliceblue;
}

.theme2 .logo h1 {
  color: #1e1b18;
    font-size: 32px;
    font-weight: 900;  
}

.theme2 .logo p{
    color: #1e1b18;
    font-size: 16px;
    font-weight: 600;  
}

/*------------------------------------------------------------------------------------------------------------------------------*/
.theme2 .navsection1 a{
    text-decoration: none;
    background-color: #c9a24e;
    color: #1e1b18;
    text-align: center;
    font-size: 20px;
    font-weight: 600;
    padding: 7px;
    margin: 10px;
    border: 1px solid rgb(58, 33, 2);
    display: inline-block;
    text-shadow: 1px 1px 1px wheat;
    

   }
   .theme2 a:hover{
    transform: scale(1.1);
} 
.navsection1 a:hover{
    color: rgb(121, 17, 69);
}
.float{
    clear: both;
    position: relative;
    z-index: 5;
}


/*------------------------------------------------------------------------------------------------------------------*/

.theme2 .card button{
    background-color: #1e1b18;
    color:#c9a24e;
}
.theme2 .card button:hover {
    transform: scale(0.9);
}

.theme2 .card p{
    color: #1e1b18;
}

.theme2 .cards {
  display: flex;
  gap: 20px;
}

.theme2 .card {
  flex: 1;
  background-color: #c9a24e;
}

.theme2 .card:nth-child(1) { order: 3; }
.theme2 .card:nth-child(2) { order: 1; }
.theme2 .card:nth-child(3) { order: 2; }


/*---------------------------------------------------------------------------------------------------*/
.theme2 .p1 ,.theme2 .p2{
    color: #c9a24e;
}

.theme2 .e,.theme2 .g,.theme2 .y,.theme2 .p,.theme2 .t {
    background-image: linear-gradient(45deg,#c9a24e,rgb(246, 240, 240) ,black);
    text-shadow:2px 2px 2px #f5e6d3;
    padding:0 10px ;
    border-radius: 10px;
}

/*----------------------------------------------------------------------------------------------*/
.theme2 #themeToggleBtn {
  display: block;
  margin: 50px auto;
  padding: 12px 20px;
  font-size: 18px;
  cursor: pointer;
  border: none;
  background: #c9a24e;
  color: #1e1b18;
  border-radius: 8px;
  transition: 0.3s;
}

#themeToggleBtn:hover {
  transform: scale(1.05);
}



/*---------------------------------------------------------------------------------------------------*/

.theme2 .footer {
  background: #c9a24e; 
  color: #1e1b18; 
}



.theme2 .container ,.theme2 .div2 a,
.theme2 .mother_list
{
    color: #1e1b18;
    font-size: 20px;
    font-weight: 600;
}

.theme2 .div2 a:hover{
    color: aliceblue;
}

